--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.7",
+    "bcrypt": "^3.0.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
