--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
+    "envalid": "^6.0.1",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
